--- a/index.html
+++ b/index.html
@@ -55,26 +55,52 @@
       border: none;
     }
 
-    .secret {
+    .input-block {
       margin-top: 20px;
-      opacity: 0.2;
-      cursor: pointer;
-      font-size: 0.9rem;
-      transition: opacity 0.3s ease, color 0.3s ease;
-      color: #888;
+      text-align: center;
     }
 
-    .secret:hover {
-      opacity: 1;
-      color: #fff;
+    input[type="password"] {
+      padding: 8px 14px;
+      border-radius: 6px;
+      border: none;
+      outline: none;
+      background: #1a1a1a;
+      color: #1db954;
+      font-size: 1rem;
+      box-shadow: 0 0 5px #1db95470;
+      text-align: center;
+    }
+
+    button {
+      margin-left: 10px;
+      padding: 8px 14px;
+      background-color: #1db954;
+      color: #000;
+      border: none;
+      border-radius: 6px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #18a149;
     }
 
     .reveal {
-      margin-top: 10px;
+      margin-top: 20px;
       display: none;
       font-size: 1rem;
       color: #1db954;
       text-align: center;
+    }
+
+    .wrong {
+      margin-top: 10px;
+      color: #ff4e4e;
+      font-size: 0.9rem;
+      display: none;
     }
   </style>
 </head>
@@ -88,12 +114,26 @@
     </iframe>
   </div>
 
-  <div class="secret" onclick="revealMessage()">click to unlock the message</div>
+  <div class="input-block">
+    <input type="password" id="pass" placeholder="Enter the code">
+    <button onclick="checkPass()">Unlock</button>
+    <div class="wrong" id="wrong">Wrong code, try again.</div>
+  </div>
+
   <div class="reveal" id="msg">In a world full of noise, you're my only signal. 🖤</div>
 
   <script>
-    function revealMessage() {
-      document.getElementById("msg").style.display = "block";
+    function checkPass() {
+      const input = document.getElementById("pass").value;
+      const reveal = document.getElementById("msg");
+      const wrong = document.getElementById("wrong");
+      if (input === "271124") {
+        reveal.style.display = "block";
+        wrong.style.display = "none";
+      } else {
+        wrong.style.display = "block";
+        reveal.style.display = "none";
+      }
     }
   </script>
 
